# siemply

./: ALL_ERRORS_FIXED.md  BUILD_FIXED.md  CLI_EXAMPLES.md  FASTAPI_ERROR_FIXED.md  HOST_MANAGEMENT_COMPLETE.md  HOST_MANAGEMENT_GUIDE.md  INSTALLATION_FIXED.md  INSTALL_DEPENDENCIES.md  PYDANTIC_V2_FIX.md  README.md  UVICORN_FIXED.md  WEB_GUI_COMPLETE.md  WEB_GUI_FIXED.md  WEB_GUI_GUIDE.md  fix_all_errors.sh  fix_pydantic_compatibility.sh  install.sh  install_dependencies.sh  pyproject.toml  quick_fix.sh  requirements.txt  requirements_new.txt  setup.py  setup_web_dirs.sh  siemply.py  siemply_demo.py  siemply_poc.py  start_host_management.sh  start_production.sh  start_web.sh  start_web_simple.sh
config/: audit.db  inventory.yml  play.yml  splunk_matrix.yml  ssh_profiles.yml
docs/: getting-started.md
plays/: health-check.yml  upgrade-enterprise.yml
reports/: siemply_demo_report_20250904_200809.md
scripts/: rotate-keys.py
src/siemply/: __init__.py
src/siemply.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/siemply/api/: __init__.py  dependencies.py  main.py  main_new.py
src/siemply/cli/: __init__.py  commands.py  main.py
src/siemply/core/: __init__.py  audit.py  inventory.py  orchestrator.py  secrets.py  ssh_executor.py  task_runner.py
src/siemply/database/: database.py  encryption.py  models.py
src/siemply/playbooks/: __init__.py  executor.py  schema.py
src/siemply/ssh/: __init__.py  runner.py
src/siemply/tasks/: __init__.py
src/siemply/utils/: __init__.py
web/: README.md  index.html  package.json  tailwind.config.js
web/public/: index.html
web/src/: App.js  index.js
web/src/components/: HealthChart.js  HostForm.js  HostsTable.js  Layout.js  RunForm.js  RunsTable.js  StatCard.js
web/src/hooks/: useWebSocket.js
web/src/pages/: Audit.js  Dashboard.js  Hosts.js  NotFound.js  Runs.js  Settings.js
web/src/services/: api.js
web/src/styles/: index.css
web_new/: index.html  package.json
web_new/src/: App.tsx
web_new/src/components/: Header.tsx  HostModal.tsx  (+5 more)
(+14 files in other folders)
